--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: postgres:15.4
     container_name: postgres
     ports:
-      - "5433:5432"
+      - ${POSTGRES_PORT:-5433}:5432
     environment:
       POSTGRES_DB: ${POSTGRES_DATABASE}
       POSTGRES_USER: ${POSTGRES_USERNAME}
@@ -33,7 +33,7 @@ services:
       - postgres
       - redis
     ports:
-      - "3000:3000"
+      - ${PORT:-3000}:3000
     networks:
       - tree
 
