--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5433
 POSTGRES_USERNAME=username
 POSTGRES_PASSWORD=password
@@ -8,6 +9,7 @@ BASE_DOMAIN=http://localhost:3000/
 EXPIRATION_URL=5
 SIZE_RANDOM_STRING=5
 
+REDIS_HOST=localhost
 REDIS_PASSWORD=12345
 REDIS_PORT=6379
 REDIS_TTL=2592000
